test/files/neg/t6217c.check
t6217c.scala:18: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package a, which is in scope
      val x = new _root_.b.B
                  ^
t6217c.scala:25: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package a, which is in scope
      import _root_.b._
             ^
t6217c.scala:19: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package a, which is in scope
      def k: _root_.b.B = (x: Any) match {
             ^
t6217c.scala:20: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package a, which is in scope
        case b: _root_.b.B => b
                ^
t6217c.scala:38: warning: _root_ in root position in package definition does not refer to the root package, but to package _root_ in package a, which is in scope
  package _root_.p {
          ^
error: No warnings can be incurred under -Werror.
5 warnings found
one error found
